# apps/auth-service/src/routes/auth.router.ts
@@ -1,10 +1,13 @@
 import  express,{Router} from "express";
 
-import { loginUser, userRegistration, verifyUserOtp } from "../controllers/auth.controller";
+import { loginUser, resetUserPassword, userForgotPassword, userRegistration, verifyUserForgotPassword, verifyUserOtp } from "../controllers/auth.controller";
 
 const router : Router = express.Router();
 
 router.post('/user-registration',userRegistration);
 router.post('/verify-user',verifyUserOtp);
 router.post('/login-user',loginUser);
+router.post('/forgot-password-user',userForgotPassword);
+router.post('/verify-forgot-password-user',verifyUserForgotPassword);
+router.post('/reset-password-user',resetUserPassword);
 export default router;
